k8s/ai-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ai-deployment
  labels:
    name:  ai-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app:  app-server
  template:
    metadata:
      labels:
        app:  app-server
    spec:
      containers:
      - image: ai-deployment:latest
        imagePullPolicy: IfNotPresent

        name:  app-server
        resources:
          requests:
            cpu: "250m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 90
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/status/healthz
            port: 3000
          initialDelaySeconds: 30
          timeoutSeconds: 10       
        ports:
        - containerPort:  3000
          name:  ai-server-port
