k8s/sandbox-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sandbox-ingress
  labels:
    app.kubernetes.io/name: sandbox-ingress
spec:
  ingressClassName: nginx 
  rules:
    - http:
        paths:
          - path: "/api/sandbox"
            pathType: Prefix
            backend:
              service:
                name: sandbox-service
                port:
                  number: 80
